--- a/charts/argo/templates/ui-deployment.yaml
+++ b/charts/argo/templates/ui-deployment.yaml
@@ -36,4 +36,8 @@ spec:
                 fieldPath: metadata.namespace
           - name: BASE_HREF
             value: /
+      {{- with .Values.ui.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end -}}
